
2.4.13
- TODO arena patchouli
- TODO update arena desc
- Fix Drain crash
- Sealed item can still put on curios slot
- Drowned has higher chance to wield trident
- Add Ancient remnant compat
- Add Bosses of Mass Destruction compat

2.4.12
- add Pocket of Restoration
- Gravity Trait
- Moonwalk Trait
- Counter Strike Trait
- Pulling Trait
- Reprint Trait
- Arena Trait
- make hostility orb to 5x5x5
- Equipment wand can open curios page as well
- Fix difficulty calculation
- Improve difficulty display: add tooltip detail
- Curse of Gluttony drops multiple bottles now
- add Soul Bound to dispell whitelist
- add Envy, Greed, Sloth, Lust, Gluttony to Ragnarok whitelist
- add max level for players
- all curio items cannot have duplicates equipped
- add Alex Caves compat
- add Ice and Fire compat
- Thorn no longer inflict trait effects
- Slimes reduce hostility loot drop rate when split
- Cataclysm mobs have default curios now
- Add individual range config for area effect traits
- Make some recipes cheaper

2.4.11
- add 9 curio items
- add 9 traits
- add witch droplet, booster potion, witch charge, eternal witch charge
- mobs at Lv.x will have only x% chance to have traits
- add region difficulty commands
- add mob trait commands
- add 2 enchantments for Repell trait and Split trait
- add difficulty related enchantments generation
- make fiery trait more lenient
- Repelling not targeting creative
- add config to allow exponential health/damage
- add config to allow disabling orbs
- add config to disable undying particles
- add config option to determine if death would reduce difficulty when keep inventory is true
- add dispell trait whitelist
- add trait candidate white list for non-enemies
- fix ender trait throwing error when teleport distance is 0
- fix ender trait teleporting to invalid position

2.4.10
- Fix regen calling potion test every tick
- Fix Invisible apply effects repeatedly
- Fix name plates being rendered from very far away
- Fix trait generation