@@ -1,3 +1,5 @@
 {
-  "values": []
+  "values": [
+    "#l2hostility:semiboss"
+  ]
 }
