@@ -139,7 +139,8 @@
 	  "min_level": "等级%s及以上的怪物掉落",
 	  "other_trait": "同时需要%2$s阶%1$s词条",
 	  "envy": "装备嫉妒诅咒时击杀有词条的怪物有概率掉落对应词条",
-	  "gluttony": "装备暴食诅咒时击杀有等级的怪物有概率掉落"
+	  "gluttony": "装备暴食诅咒时击杀有等级的怪物有概率掉落",
+	  "required": "需要佩戴[%s]饰品才能掉落"
 	}
   }
 }
