@@ -5,6 +5,9 @@
 - Fix Drain crash
 - Sealed item can still put on curios slot
 - Drowned has higher chance to wield trident
+- Add new levels of progression
+- Change spawner level bonus from additive to multiplicative
+- Prevent creepers from spawning in hostility spawner
 - Add Ancient remnant compat
 - Add Bosses of Mass Destruction compat
 
